Take into account watched files that are truncated and filled with NUL bytes by the OS (#192)
* Update go-tail/follower to fix NUL byte problem, and add note to README

* copy fix